# SLC

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/finite_automata/: DFA.cpp  DFA.hpp
src/language/: Alphabet.cpp  Alphabet.hpp  Language.cpp  Language.hpp  Word.cpp  Word.hpp
src/rules/abstract/: AbstractRule.cpp  AbstractRule.hpp
src/rules/ruleset/: Palindrome.cpp  Palindrome.hpp
src/states/: State.cpp  State.hpp
